<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragment.HomeFragment">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:background="@color/lightgrey">

            <TextView
                android:id="@+id/welcome_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_user"
                android:textSize="15sp"
                android:layout_marginVertical="10dp"
                android:textColor="@color/black"/>

            <LinearLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingHorizontal="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="150dp"
                        android:orientation="vertical"
                        android:gravity="center_horizontal"
                        android:layout_marginEnd="5dp"
                        android:padding="10dp"
                        android:background="@color/white">
                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"/>
                        <TextView
                            android:id="@+id/home_weight"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dynamic_weight"
                            android:textStyle="bold"
                            android:textSize="25sp"
                            android:textColor="@color/black"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/weight_word"
                            android:textSize="15sp"
                            android:textColor="@color/grey"/>

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"/>

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/home_add_weight"
                            android:minHeight="0dp"
                            android:minWidth="0dp"
                            android:textSize="12sp"
                            android:paddingHorizontal="20dp"
                            android:paddingVertical="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/save"
                            android:textColor="@color/white"
                            android:background="@color/black"
                            />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_marginStart="5dp"
                        android:background="@color/white"
                        >


                    </LinearLayout>

                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/all_sessions"
                    android:textSize="15sp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/black"/>
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/sessions_list"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:paddingVertical="5dp"
                        />


            </LinearLayout>

        </LinearLayout>

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floating_action_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:contentDescription="@string/add"
                android:src="@drawable/ic_baseline_add_24"
                android:layout_margin="20dp"
                app:borderWidth="0dp"
                app:tint="@color/white"
                app:rippleColor="@color/white"
                app:backgroundTint="@color/black"
                android:layout_gravity="right|bottom"
                android:focusable="true"
                tools:ignore="RtlHardcoded" />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>


    </FrameLayout>
</layout>
