<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personal_data"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:layout_marginVertical="50dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="50dp"
            android:paddingVertical="10dp"
            android:hint="@string/prenom"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            app:counterMaxLength="20"
            app:boxStrokeColor="@color/black"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:maxLines="1"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="50dp"
            android:paddingVertical="10dp"
            android:hint="@string/nom"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            app:counterMaxLength="20"
            app:boxStrokeColor="@color/black"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:maxLines="1"
                />
        </com.google.android.material.textfield.TextInputLayout>

<!--
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_firstname"
                android:textSize="15sp"
                android:textColor="@color/black"/>
            <EditText
                android:maxLines="1"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:backgroundTint="@color/black"
                android:textSize="15sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_name"
                android:textSize="15sp"
                android:textColor="@color/black"/>
            <EditText
                android:maxLines="1"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:backgroundTint="@color/black"
                android:textSize="15sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_sexe"
                android:textSize="15sp"
                android:textColor="@color/black"/>
            <Spinner
                android:id="@+id/user_sexe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:entries="@array/sexe_array"
                android:background="@drawable/border"
                />
        </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_weight"
                android:textSize="15sp"
                android:textColor="@color/black"/>
            <EditText
                android:maxLines="1"
                android:maxLength="3"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:backgroundTint="@color/black"
                android:textSize="15sp"/>
                <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_height"
                android:textSize="15sp"
                android:textColor="@color/black"/>
            <EditText
                android:maxLines="1"
                android:maxLength="3"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:backgroundTint="@color/black"
                android:textSize="15sp"/>
        </LinearLayout>

                <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_body_type"
                android:textSize="15sp"
                android:textColor="@color/black"/>
            <Spinner
                android:id="@+id/user_body_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:entries="@array/body_type_array"
                android:background="@drawable/border"
                />
        </LinearLayout>

-->
        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_sexe"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="50dp"
            android:paddingVertical="10dp"
            android:textColor="@color/black"
            app:endIconMode="dropdown_menu"
            android:textColorHint="@color/grey"
            app:boxStrokeColor="@color/black"
            android:hint="@string/sexe">

            <AutoCompleteTextView
                android:id="@+id/menu_sexe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:inputType="none"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="50dp"
            android:orientation="horizontal">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingEnd="10dp"
                android:layout_weight="1"
                android:paddingVertical="10dp"
                android:hint="@string/weight_word"
                app:suffixText="@string/kg"
                app:suffixTextColor="@color/black"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                app:counterMaxLength="20"
                app:boxStrokeColor="@color/black"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                tools:ignore="RtlSymmetry">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:maxLines="1"
                    android:maxLength="3"
                    android:inputType="number"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:layout_weight="1"
                android:paddingVertical="10dp"
                android:hint="@string/height_word"
                app:suffixText="@string/cm"
                app:suffixTextColor="@color/black"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                app:counterMaxLength="20"
                app:boxStrokeColor="@color/black"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                tools:ignore="RtlSymmetry">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_height"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:maxLines="1"
                    android:maxLength="3"
                    android:inputType="number"
                    />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_body_type"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="50dp"
            android:paddingVertical="10dp"
            android:textColor="@color/black"
            app:endIconMode="dropdown_menu"
            android:textColorHint="@color/grey"
            app:boxStrokeColor="@color/black"
            android:hint="@string/body_type">

            <AutoCompleteTextView
                android:id="@+id/menu_body_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:inputType="none"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/data_validate"
            android:paddingHorizontal="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/validate"
            android:textColor="@color/white"
            android:background="@color/black"
            android:layout_marginVertical="50dp"/>




    </LinearLayout>




</layout>